<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/myCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/topBarLoginElevation"
                android:gravity="center"
                android:background="@drawable/topbar_login">
                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_arrow"
                    android:layout_marginTop="@dimen/imageMarginTop"
                    android:layout_marginStart="@dimen/marginStart"/>
                <TextView
                    android:layout_marginTop="@dimen/marginTop"
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:layout_toEndOf="@+id/backArrow"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/titleTextSize"/>

                <ImageView
                    android:id="@+id/gifImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imageHeight"
                    android:src="@drawable/register"
                    android:layout_marginTop="@dimen/imageMarginTop"
                    android:layout_marginBottom="@dimen/imageMarginBottom"
                    android:gravity="center"
                    android:layout_below="@+id/title"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myCard"
                android:layout_marginTop="@dimen/marginTop"
                app:boxStrokeColor="@color/darkBlue"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:elevation="@dimen/loginElevation"
                android:hint="@string/signName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvName"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_profile"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                app:boxStrokeColor="@color/darkBlue"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:elevation="@dimen/loginElevation"
                android:hint="@string/signEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmail"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/ic_email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                app:boxStrokeColor="@color/darkBlue"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:elevation="@dimen/loginElevation"
                android:hint="@string/signLocation"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLocation"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_location"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                app:boxStrokeColor="@color/darkBlue"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:elevation="@dimen/loginElevation"
                android:hint="@string/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPhone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:drawableEnd="@drawable/ic_phone"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumber"
                android:elevation="@dimen/loginElevation"
                app:boxStrokeColor="@color/darkBlue"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/darkBlue"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginBottom="@dimen/marginBottom"
                android:background="@drawable/signup_btn"
                android:padding="@dimen/drawablePadding"
                android:textStyle="bold"
                android:elevation="@dimen/loginElevation"
                android:text="@string/SignUP"
                android:textColor="@color/white"
                android:textSize="@dimen/btnTextSize" />
            <LinearLayout
                android:id="@+id/alreadyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginBottom="@dimen/imageMarginBottom"
                android:layout_below="@+id/signUpBtn"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oldUser"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/lightBrown"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>